<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <LinearLayout
        android:id="@+id/searchLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center">

        <EditText
            android:id="@+id/activitySearchText"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        
        <Button
            android:id="@+id/activitySearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/activitySearchReceiptName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt"
        app:layout_constraintTop_toBottomOf="@id/searchLinearLayout"
        app:layout_constraintStart_toStartOf="@id/searchLinearLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/activitySearchReceiptNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt"
        app:layout_constraintBottom_toBottomOf="@id/activitySearchReceiptName"
        app:layout_constraintStart_toEndOf="@id/activitySearchReceiptName"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/activitySearchIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        app:layout_constraintTop_toBottomOf="@id/activitySearchReceiptName"
        app:layout_constraintStart_toStartOf="@id/activitySearchReceiptName"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/activitySearchIngredientsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        android:text="@string/receipt"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/activitySearchIngredients"
        app:layout_constraintTop_toBottomOf="@+id/activitySearchIngredients" />

    <TextView
        android:id="@+id/activitySearchServings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/servings"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/activitySearchIngredients"
        app:layout_constraintTop_toBottomOf="@+id/activitySearchIngredientsText" />

    <TextView
        android:id="@+id/activitySearchServingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt"
        app:layout_constraintBottom_toBottomOf="@id/activitySearchServings"
        app:layout_constraintStart_toEndOf="@id/activitySearchServings"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/activitySearchInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/instructions"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activitySearchServings" />

    <TextView
        android:id="@+id/activitySearchInstructionsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/receipt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activitySearchInstructions" />

</androidx.constraintlayout.widget.ConstraintLayout>